# slack-channel-plugin

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
hooks/: hooks.json  on-session-start.sh
skills/configure/: SKILL.md
slack_channel/: __init__.py  server.py
tests/: test_channel_resolution.py
