[project]
name = "slack-channel-plugin"
version = "0.1.7"
description = "Slack channel plugin for Claude Code — real-time messaging via Socket Mode"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{ name = "Oded Falik" }]
keywords = ["mcp", "slack", "claude-code", "channel-plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "mcp>=1.26.0",
    "slack-sdk>=3.27.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
slack-channel = "slack_channel.server:run"

[project.urls]
Repository = "https://github.com/odfalik/slack-channel-plugin"
Issues = "https://github.com/odfalik/slack-channel-plugin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slack_channel"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
